<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DMS</string>
    <!-- Main view -->
    <string name="main_view_orders_title">Orders</string>
    <string name="main_view_orders_desc">View your orders</string>
    <string name="main_view_products_desc">View Products</string>
    <string name="main_view_products_title">Products</string>
    <string name="main_activity_title_salesrep">Sales Rep</string>
    <string name="main_view_desc_salesrep">View sales representatives</string>
    <string name="main_view_title_shops">Shops</string>
    <string name="main_view_desc_shops">View shops</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="signin">Sign In</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="Name">Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registered_emailid">Please Enter Your Registered Email Below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <!--Order Strings-->
    <string name="order_main_name">Orders</string>
    <string name="order_date_placeholder">DD/MM/YY</string>
    <string name="order_name_placeholder">Order name</string>
    <string name="order_status_placeholder">Order Status</string>
    <string name="order_add_label">Add new order</string>

    <!--Add order-->
    <string name="order_add_name_label">Name</string>
    <string name="order_add_name_hint">Order name</string>
    <string name="order_add_button">Add Order</string>
    <string name="order_view_customer_name">Customer Name</string>
    <string name="order_view_phone_no">+94 77 123 1234</string>
    <string name="order_view_email">example@email.com</string>
    <string name="order_delivery_label">Delivery</string>
    <string name="order_created_label">Created</string>
    <string name="order_new_title">New order</string>
    <string name="order_new_hint">Order name</string>
    <string name="order_sub_total_label">Sub-Total</string>
    <string name="order_taxes_label">Taxes (10%)</string>
    <string name="order_total_label">Total</string>
    <string name="order_deny_button">Deny</string>
    <string name="order_accept_button">Accept</string>
    <string name="order_update_button">Update</string>
    <string name="order_details">Order Details</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="product_icon">Product Icon</string>
    <string name="product_quantity_hint">0</string>
    <string name="product_desc_hint">Product Description</string>
    <string name="product_price_hint">0.00</string>
    <string name="product_update">Product Update</string>
    <string name="close_icon">X</string>
    <string name="products">Products</string>
    <string name="ic_minus">-</string>
    <string name="quantity">Quantity</string>
    <string name="ic_plus">+</string>
    <string name="add_to_stock">Add to Stock</string>
    <string name="manage_product">Manage Product</string>
    <string name="textview">TextView</string>
    <string name="sales_rep_registration">Sales-Rep Registration</string>
    <string name="add_rep">Add Rep</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="logout">Logout</string>
    <string name="edit_sales_rep">Edit Sales-Rep</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="new_product_insert">New Product Insert</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="initial_quantity">Initial Quantity</string>
    <string name="selling_price">Selling Price</string>
    <string name="add_product">Add Product</string>
    <string name="search_for_shortage">Search / ! for shortage</string>

    <!-- Products -->
    <array name="category">
        <item>"Please select a Category"</item>
        <item>Food</item>
        <item>Cosmetics</item>
        <item>Stationary</item>
    </array>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="set_date">Set Date</string>
    <string name="no_orders">No Orders!</string>
    <string name="shop_address">Shop Address</string>
    <string name="shop_contact">Shop Contact</string>
    <string name="customer_name">Customer Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="edit_shop_details">Edit-Shop Details</string>
    <string name="shop_registration">Shop Registration</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="insert">Insert</string>
    <string name="add">Add</string>
    <string name="shops">Shops</string>
    <string name="insert_shop">Insert Shop</string>
    <string name="edit_shop">Edit Shop</string>
    <string name="select_products">Select Products</string>
    <string name="add_products">Add Products</string>
    <string name="category">Category</string>
    <string name="productss">Products</string>
    <string name="delivery_charge_10">Delivery Charge (10%)</string>
</resources>
