<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <CheckBox
        android:id="@+id/product_name"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/product_name" />

    <TextView
        android:id="@+id/product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/category"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/product_name"
        android:layout_alignBottom="@+id/product_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/product_price_hint" />

</RelativeLayout>
