<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/productIcon"
            android:layout_width="108dp"
            android:layout_height="99dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="#faf8f9"
            android:padding="8dp"
            android:src="@drawable/listshop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_address"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_contact"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
