<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AddSalesRep">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:text="@string/sales_rep_registration"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/SU_Name"
                        android:layout_width="290dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/edit_text_style"
                        android:drawableLeft="@drawable/user"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/user"
                        android:hint="@string/Name"
                        android:inputType="textCapWords" />


                    <EditText
                        android:id="@+id/SU_Email"
                        android:layout_width="290dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/edit_text_style"
                        android:drawableLeft="@drawable/email"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/email"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/SU_Phoneno"
                        android:layout_width="290dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/edit_text_style"
                        android:drawableLeft="@drawable/phone"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/phone"
                        android:hint="@string/mobileNumber"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/SU_Password"
                        android:layout_width="290dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/edit_text_style"
                        android:drawableLeft="@drawable/password"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/password"
                        android:hint="@string/passowrd"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/SU_ConPassword"
                        android:layout_width="290dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/edit_text_style"
                        android:drawableLeft="@drawable/conpassword"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/conpassword"
                        android:hint="@string/confirmPassword"
                        android:inputType="textPassword" />

                    <Button
                        android:id="@+id/addSRBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="40dp"
                        android:layout_marginTop="35dp"
                        android:background="@drawable/buttonstyle"
                        android:text="@string/add_rep"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
