<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            app:srcCompat="@drawable/ic_person"
            android:contentDescription="@string/order_view_customer_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/order_view_customer_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            app:srcCompat="@drawable/ic_phone"
            android:contentDescription="@string/order_view_phone_no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/order_view_phone_no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            app:srcCompat="@drawable/ic_email"
            android:contentDescription="@string/order_view_email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:text="@string/order_view_email"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp" />
    </LinearLayout>
</LinearLayout>
