<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/order_sub_total_label"

            card_view:layout_constraintEnd_toStartOf="@+id/subTotalValue"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/subTotalValue"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text=""
            android:textAlignment="textEnd"

            card_view:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/delivery_charge_10"

            card_view:layout_constraintEnd_toStartOf="@+id/deliveryChargeVal"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/deliveryChargeVal"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text=""
            android:textAlignment="textEnd"

            card_view:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/order_total_label"
            android:textSize="18sp"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/orderTotalValue"
            card_view:layout_constraintEnd_toStartOf="@+id/orderTotalValue"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/orderTotalValue"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text=""
            android:textAlignment="textEnd"
            android:textSize="24sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
